--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -95,7 +95,7 @@
 						</li>
 
 						<li class="sidebar-item">
-							<a class="sidebar-link" href="pages-profile.html">
+							<a class="sidebar-link" href="{{url_for('perfil')}}">
 								<i class="align-middle" data-feather="user"></i> <span
 									class="align-middle">Perfil</span>
 							</a>
