--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -138,6 +138,12 @@
 									class="align-middle">Horarios por docente</span>
 							</a>
 						</li>
+						<li class="sidebar-item">
+							<a class="sidebar-link" href="{{url_for('ReporteAmbiente')}}">
+								<i class="align-middle" data-feather="align-left"></i> <span
+									class="align-middle">Reporte Ambientes</span>
+							</a>
+						</li>
 
 						<!-- <li class="sidebar-item">				
 							<div class="accordion accordion-flush" id="accordionFlushExample">
